[package]
name = "bb8-tiberius"
version = "0.16.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "bb8 connection manager for Tiberius"
repository = "https://github.com/sqlagentgilmore/bb8-tiberius"
keywords = ["mssql", "tiberius", "database", "pool"]

[dependencies]
bb8 = "0.9"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = ["net"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
async-std = { version = "1.9.0", optional = true }
[target.'cfg(windows)'.dependencies]
tiberius = { git = "https://github.com/sqlagentgilmore/tiberius", default-features = false, features = ["rust_decimal", "winauth", "sql-browser-tokio"] }

[target.'cfg(unix)'.dependencies]
tiberius = { git = "https://github.com/sqlagentgilmore/tiberius", default-features = false, features = ["rust_decimal", "integrated-auth-gssapi"] }

[features]
default = ["chrono",  "tds73", "with-tokio", "sql-browser", "tiberius/winauth"]
tls = ["tiberius/rustls"]
with-tokio = ["tokio", "tokio-util"]
with-async-std = ["async-std"]
tds73 = ["tiberius/tds73"]
chrono = ["tiberius/chrono"]
sql-browser = ["tiberius/sql-browser-tokio"]

[dev-dependencies]
tokio = { version = "1.1.0", features = ["macros", "rt-multi-thread"] }
